--- a/src/app/style.css
+++ b/src/app/style.css
@@ -8,13 +8,29 @@ body {
     justify-content: center;
 }
 
+.padre-productos {
+    margin: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
 .NavBar {
     display: flex;
     justify-content: space-around;
 }
 
-.nombreprompt {
-    font-size: x-large;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 50px;
+.fotovalija {
+    max-width: 300px;
+}
+
+.estilo_compra {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
+    width: 200px;
+    height: 75px;
+    border-radius: 10px;
+    background-color: burlywood;
 }
