--- a/src/app/style.css
+++ b/src/app/style.css
@@ -19,6 +19,16 @@
     max-width: 100px;
 }
 
+
+.circulo {
+    float: right;
+    width: 40px;
+    height: 30px;
+    shape-outside: circle();
+    clip-path: circle();
+    background: burlywood
+}
+
 .foto {
     max-width: 300px;
 }
