--- a/src/app/style.css
+++ b/src/app/style.css
@@ -20,14 +20,20 @@
 }
 
 
-.circulo {
+.contador {
+    color: black;
+    text-decoration: none;
     float: right;
-    width: 40px;
+    width: 25px;
     height: 30px;
-    shape-outside: circle();
-    clip-path: circle();
-    background: burlywood
+    background: rgb(156, 7, 7);
+    border-radius: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
+
 
 .foto {
     max-width: 300px;
