--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -8,17 +8,18 @@
     color: black;
 }
 
-.Card {
+.card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
+
 
 .carrito,
 .necy {
     max-width: 100px;
 }
-
 
 .contador {
     color: black;
